<resources>
    <string name="app_name">Mivox</string>
    <string name="greeting">"Привіт, "</string>
    <string name="username">username</string>
    <string name="on_balance">На рахунку:</string>
    <string name="balance">0</string>
    <string name="сurrency">" грн"</string>
    <string name="tariff_title">Тариф:</string>
    <string name="tariff">tariff</string>
    <string name="price_title">Плата за місяць:</string>
    <string name="price">0</string>
    <string name="services_title">Доступно:</string>
    <string name="internet_icon">internet_icon:</string>
    <string name="internet_description">internet_description</string>
    <string name="phone_calls_icon">phone_calls_icon:</string>
    <string name="phone_calls_description">phone_calls_description</string>
    <string name="sms_icon">sms_icon:</string>
    <string name="sms_description">sms_description</string>
    <string name="see_tariffs">Переглянути наявні тарифи</string>
    <string name="wishes">"Гарного дня "</string>
    <string name="smile_icon">smile_icon</string>
    <string name="all_tariffs_title">Усі тарифи</string>
    <string name="prepaid_title">Предоплата</string>
    <string name="contract_title">Контракт</string>
    <string name="period">грн/міс</string>
    <string name="choose">Вибрати</string>
    <string name="avatar_title">Профіль користувача</string>
    <string name="avatar_icon">avatar_icon</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="phone_number_title">Номер телефону:</string>
    <string name="phone_number">none</string>
    <string name="connected_tariff">Підключений тариф:</string>
    <string name="connection_date_title">Дата підключення:</string>
    <string name="connection_date">none</string>
    <string name="suspend">Призупинити тариф</string>
    <string name="exit">Вийти</string>Вийти
    <string name="logo_icon">logo_icon</string>
    <string name="login_title">Вхід</string>
    <string name="enter_num">Введіть номер телефону</string>
    <string name="num_hint">+380453562409</string>
    <string name="next">Далі</string>
    <string name="enter_sms_code">Введіть SMS-код</string>
    <string name="sms_code_description">SMS-код надіслано на номер телефону</string>
    <string name="sms_hint">_ _ _ _ _ _</string>
    <string name="send_again">Надіслати ще раз</string>
    <string name="login">Увійти</string>
</resources>