<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/tariffName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/tariff"
            android:textColor="@color/purple"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/internetService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/internet_description"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phoneCallsService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/phone_calls_description"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/smsService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sms_description"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tariffPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/price"
                    android:textColor="@color/purple"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/period"
                    android:textColor="@color/grey"
                    android:textSize="23sp" />
            </LinearLayout>

            <Button
                android:id="@+id/chooseButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/choose"
                android:textColorLink="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>