<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >

    <TextView
        android:id="@+id/imageViewSMSTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="25sp"
        android:text="@string/enter_sms_code"
        android:textColor="@color/grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/textViewSMSDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSMSTitle" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sms_code_description"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/phone_number"
            android:textColor="@color/purple"
            android:textSize="18sp" />

    </LinearLayout>

    <EditText
        android:id="@+id/smsCodeField"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:hint="@string/sms_hint"
        android:textSize="28sp"
        android:textColor="@color/grey"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:background="@drawable/rounded_white_border"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintTop_toBottomOf="@+id/textViewSMSDescription"/>

    <TextView
        android:id="@+id/textViewResend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/send_again"
        android:textColor="@color/purple"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/smsCodeField" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:height="95dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/login"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>