<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo_icon"
        android:src="@drawable/logo_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/purple" />

    <TextView
        android:id="@+id/imageViewLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="25sp"
        android:text="@string/login_title"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"/>

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/enter_num"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLoginTitle"/>

    <EditText
        android:id="@+id/editPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/rounded_white_border"
        android:hint="@string/num_hint"
        android:textColorHint="@color/grey_hint"
        android:textColor="@color/grey"
        android:inputType="phone"
        android:textSize="18sp"
        android:maxLength="13"
        android:fontFamily="@font/montserrat_medium"
        app:layout_constraintTop_toBottomOf="@+id/textViewLoginTitle"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:height="95dp"
        android:backgroundTint="@color/purple"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/next"
        android:textColorLink="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>