<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background" >


    <TextView
        android:id="@+id/textViewAllTariffs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="25sp"
        android:text="@string/all_tariffs_title"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <LinearLayout
        android:id="@+id/tariffType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewAllTariffs" >

        <Button
            android:id="@+id/prepaidButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/prepaid_title"
            android:textColor="@color/grey"
            android:textSize="20sp">
        </Button>

        <Button
            android:id="@+id/contractButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/contract_title"
            android:textColor="@color/grey"
            android:textSize="20sp">
        </Button>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTariffs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="16dp"
        android:fillViewport="false"
        android:overScrollMode="always"
        app:layout_constraintTop_toBottomOf="@+id/tariffType"
        app:layout_constraintBottom_toTopOf="@id/btnExportTariffs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/btnExportTariffs"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:text="Зберегти тарифи"
        android:layout_margin="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:backgroundTint="@color/purple"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:cornerRadius="16sp"
        app:layout_constraintBottom_toTopOf="@id/nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>



    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_white_border_bottom_bar"
        android:orientation="vertical"
        android:padding="5dp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            app:backgroundTint="@color/white"
            app:itemPaddingBottom="0dp"
            app:itemPaddingTop="6dp"
            app:itemTextAppearanceActive="@style/NavTextStyle"
            app:itemTextAppearanceInactive="@style/NavTextStyle"
            app:labelVisibilityMode="labeled"
            app:itemTextColor="@color/nav_icon_colors"
            app:itemIconTint="@color/nav_icon_colors"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>